--- a/alpha/cityfusion_admin/templates/actions/actions.html
+++ b/alpha/cityfusion_admin/templates/actions/actions.html
@@ -1,4 +1,4 @@
-{% if request.user.is_staff %}
+{% if request.user.is_staff or request.user == event.owner %}
     <div class="cfadmin-actions">
         <a href="{% url 'event_copy' event.authentication_key %}">Copy</a>
         <a href="{% url 'event_edit' event.authentication_key %}">Edit</a>
