FB importing correcting

--- a/alpha/event/templates/events/create/_form.html
+++ b/alpha/event/templates/events/create/_form.html
@@ -317,7 +317,7 @@
         </div>
 
         <div class="submit-wrapper">
-            <input type="submit" value="Post Event" tabindex="8">
+            <input type="submit" value="Post Event" tabindex="8" data-id="event_submit">
         </div>
     </form>
 </div>
