--- a/alpha/event/templates/events/_searchpad_popup_datetime_menu.html
+++ b/alpha/event/templates/events/_searchpad_popup_datetime_menu.html
@@ -31,7 +31,7 @@
         </tr>        
     </table>
     
-    <div class="jump-popup">
+    <div class="jump-popup jump-popup_size_narrow">
         <div>
             <div class="jump-popup__date-row">
                 <div class="jump-popup__date-cell">
