correcting advertising cpm text

--- a/alpha/home/templates/pages/advertising.html
+++ b/alpha/home/templates/pages/advertising.html
@@ -33,10 +33,10 @@
                 <h2 class="advertising-item__title">Cost per Mile (CPM)</h2>
                 <img class="advertising-item__image" src="{{ STATIC_URL }}images/cpm_img.png" alt="" />
                 <div class="advertising-item__description">
-                    Also known as cost per thousand.These ads you pay for a certain number of impressions.
-                    How this work is: for every 1000 impressions you would pay $ .50 to $3.00 depending on
-                    the size of the ad So if you chose to spend $1000.00 your advertisement would be displayed
-                    500,000 times across the screens of the viewers. (based on .50 add) This can be found in your
+                    Also known as cost per thousand. These ads you pay for a certain number of impressions.
+                    How this work is: for every 1000 impressions you would pay $ .50 to $3.00 depending on the
+                    size of the ad. So if you chose to spend $1000.00, your advertisement would be displayed
+                    500,000 times across the screens of the viewers (based on .50 ad). This can be found in your
                     account page titled "Create New Add". A reminder will be emailed to you when your funds are
                     getting low.
                 </div>
